[tool.poetry]
name = "mock-docker"
version = "0.1.0"
description = "My version of docker"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mock_docker"}]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
